# bazel_101

bazel_grpc_python/: BUILD  WORKSPACE  fakeperson.proto  fakeperson_client.py  fakeperson_server.py  fakeperson_test.py  greeter_client.py  greeter_server.py  requirements.txt
bazel_python_101/: BUILD.bazel  WORKSPACE  greet.py  main.py  reqlib.py
